--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   background: linear-gradient(180deg, #000000, #000000);
   color: white;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Comic Sans MS', 'Comic Sans', cursive;
   text-align: center;
   display: flex;
   align-items: center;
